tests/miniJava/pos/000637_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( false ) java = 0 ; else System.out.println ( { } ) ; } }
