tests/miniJava/neg/000504_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { = = 0 ; } }
